Created component structure for dashboard
- Refactored components and added components for the dashboard
- Added a groups service for implementing the group list
- Refactored other files for file restructure

--- a/src/app/components/dashboard/dashboard.html
+++ b/src/app/components/dashboard/dashboard.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<div class="discord-layout">
+  <app-group-list />
+  <app-channel-list />
+  <app-chat />
+  <app-user-list />
+</div>
