--- a/src/app/components/dashboard/dashboard.html
+++ b/src/app/components/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="discord-layout">
+<div class="flex h-screen bg-[var(--background)]">
   <app-group-list />
   <app-channel-list />
   <app-chat />
