--- a/src/app/components/dashboard/channel-list/channel-list.html
+++ b/src/app/components/dashboard/channel-list/channel-list.html
@@ -1,1 +1,5 @@
-<p>channel-list works!</p>
+<div
+  class="flex h-screen w-64 flex-col justify-between border-e border-[var(--border)] bg-[var(--sidebar-bg)] text-white text-center"
+>
+  <div class="mt-5">Channel List</div>
+</div>
